overflow fixes, added keywords

--- a/client/src/components/Results/Results.css
+++ b/client/src/components/Results/Results.css
@@ -1,27 +1,27 @@
 .results-container {
     width: 100%;
-    height: auto;
+    /* height: auto; */
     position: relative;
     display: flex;
     flex-flow: column;
-    max-height: 900px;
-    height: 900px;
+    /* max-height: 900px;
+    height: 900px; */
     justify-content: center;
     align-items: center;
-    margin-top: 75px;
+    margin-top: 30px;
 }
 
 .results-inner {
     width: 90%;
     max-width: 90%;
-    height: auto;
+    /* height: auto; */
     position: relative;
     display: flex;
     flex-flow: row wrap;
-    max-height: 700px;
-    height: 700px;
+    /* max-height: 700px;
+    height: 700px; */
     box-shadow: 0.75rem 0.85rem 1.75rem 0 rgba(0,0,0,.32);
-    overflow-y: scroll;
+    overflow-y: hidden;
     overflow-x: hidden;
     justify-content: space-around;
     padding-top: 30px;
